# EInk-Reading-Scheduler

./: README.md  bundle.sh  flake.nix  meson.build
emulator/kobo/: selected_books.db
emulator/kobo/.kobo/: KoboReader.sqlite
src/: main.cpp  main.ui.xml
src/icons/: add_icon.h  book_icon.h  quit_icon.h  shop_icon.h  streak_icon.h
src/screens/: bookInputFieldScreen.cpp  bookInputFieldScreen.h  bookSelectorScreen.cpp  bookSelectorScreen.h  mainScreen.cpp  mainScreen.h
src/utils/: generalUtils.cpp  generalUtils.h  localDatabase.cpp  localDatabase.h  mainBookCard.cpp  mainBookCard.h  readDatabase.cpp  readDatabase.h
